--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/tobeak1026/fishsimulator#readme",
   "dependencies": {
     "detect-collisions": "^2.4.4",
-    "gl-matrix": "^3.1.0"
+    "gl-matrix": "^3.1.0",
+    "lodash": "^4.17.15"
   }
 }
